syntax = "proto3";

package highschool.v1;

option go_package = "github.com/highschool/backend/gen/highschool/v1;highschoolv1";

// 考生信息
message CandidateInfo {
  int32 district_id = 1;
  int32 middle_school_id = 2;
  bool has_quota_school_eligibility = 3;
}

// 考生成绩
message CandidateScores {
  double total = 1;
  double chinese = 2;
  double math = 3;
  double foreign = 4;
  double integrated = 5;
  double ethics = 6;
  double history = 7;
  double pe = 8;
}

// 排名信息
message RankingInfo {
  int32 rank = 1;
  int32 total_students = 2;
  double percentile = 3;
}

// 志愿信息
message Volunteers {
  optional int32 quota_district = 1;
  repeated int32 quota_school = 2;
  repeated int32 unified = 3;
}

// 排名预测
message RankPrediction {
  int32 district_rank = 1;
  int32 district_rank_range_low = 2;
  int32 district_rank_range_high = 3;
  string confidence = 4;
  double percentile = 5;
}

// 志愿概率
message VolunteerProbability {
  string batch = 1;
  int32 school_id = 2;
  string school_name = 3;
  string school_code = 4;
  double probability = 5;
  string risk_level = 6;
  optional double score_diff = 7;
  int32 volunteer_index = 8;
}

// 策略梯度
message StrategyGradient {
  int32 reach = 1;
  int32 target = 2;
  int32 safety = 3;
}

// 志愿合理性
message VolunteerRationality {
  bool has_safety_school = 1;
  bool is_gradient_reasonable = 2;
  bool has_duplicate_or_invalid = 3;
}

// 策略分析
message StrategyAnalysis {
  int32 score = 1;
  StrategyGradient gradient = 2;
  repeated string suggestions = 3;
  repeated string warnings = 4;
  VolunteerRationality volunteer_rationality = 5;
}

// 分数分布项
message ScoreDistributionItem {
  string range = 1;
  int32 count = 2;
}

// 竞争分析
message CompetitorAnalysis {
  int32 count = 1;
  repeated ScoreDistributionItem score_distribution = 2;
}

// 模拟结果
message SimulationResults {
  RankPrediction predictions = 1;
  repeated VolunteerProbability probabilities = 2;
  StrategyAnalysis strategy = 3;
  CompetitorAnalysis competitors = 4;
}

// 分析结果
message AnalysisResult {
  string id = 1;
  string status = 2;
  optional SimulationResults results = 3;
  string created_at = 4;
  optional string completed_at = 5;
}

// 历史记录摘要
message HistorySummary {
  string id = 1;
  string created_at = 2;
  message Summary {
    int32 total_volunteers = 1;
    int32 safe_count = 2;
    int32 moderate_count = 3;
    int32 risky_count = 4;
  }
  Summary summary = 3;
}
